fix: header title and button spacing

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -11,5 +11,7 @@
     display: flex;
     overflow-y: auto;
     position: relative;
+    z-index: 1;
+    margin-top: 6rem;
   }
 }
