--- a/src/components/Layout/components/Header/Header.module.css
+++ b/src/components/Layout/components/Header/Header.module.css
@@ -33,14 +33,27 @@
   flex-direction: column;
 
   label {
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
+    gap: 1rem;
     text-align: center;
     flex: 0;
     background: var(--color-theme-blue);
+    border-bottom: 0.2rem solid var(--color-white);
+
+
+    span {
+      flex: 0;
+    }
+
+    h1 {
+      flex: 1;
+      display: inline-block;
+    }
   }
 
-  h1 {
-    display: inline-block;
-  }
+
 
   input {
     display: none;
@@ -52,6 +65,7 @@
     flex-direction: column;
     overflow-y: auto;
     background: var(--color-theme-blue);
+    border-bottom: 0.2rem solid var(--color-white);
 
     a {
       text-align: left;
@@ -67,26 +81,24 @@
   svg {
     display: none;
     color: var(--color-white);
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
   }
 
-  input:checked+svg {
+  input:checked+span svg:nth-of-type(1) {
     display: inline-block;
   }
 
-  input:not(:checked)+svg+svg {
+  input:not(:checked)+span svg:nth-of-type(2) {
     display: inline-block;
   }
 
 }
 
 .header {
-  position: sticky;
+  position: fixed;
   z-index: 2;
   display: flex;
   inset: 0;
+  bottom: auto;
 
   a {
     text-decoration: none;
